# strip-obu-dv

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  main.c
scripts/: build.sh  clang-format.sh  strip-with-ffmpeg.sh
test-data/: .gitignore  dv.obu  no-dv.obu
